# Green_Cloud_Computing

./: .dockerignore  DEPLOYMENT.md  pyproject.toml
.github/workflows/: publish-opa-bundle.yaml
app/: Dockerfile  main.py  requirements.txt
app/utils/: vm_fetch_spec.py
k8s/: certificate.yaml  example_vm.yaml  example_vm_2.yaml  example_vm_3.yaml  mutating-webhook-reg.yaml  opa-values.yaml  scheduler-deployment.yaml  scheduler-service.yaml  vmtemplate-crd.yaml  webhook-deployment.yaml  webhook-service.yaml
policies/constraints/: gdpr.rego  latency.rego
webhook/: Dockerfile  requirements.txt  webhook.py
